2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/codecs/SmokeCodec.java: (SmokeCodec):
	* src/com/fluendo/jheora/DCTDecode.java:
	(DCTDecode.....UpdateUMV_HBorders):
	* src/com/fluendo/jheora/Info.java: (Info._tp_readlsbint):
	* src/com/fluendo/jheora/iDCT.java: (iDCT.IDct10):
	* src/com/fluendo/jst/Element.java: (Element.getPad):
	* src/com/fluendo/jst/Pad.java: (Pad.doCapsListeners):
	* src/com/fluendo/jst/Pipeline.java: (Pipeline.doChildStateChange):
	* src/com/fluendo/player/CortadoPipeline.java: (CortadoPipeline):
	  remove unused vars

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.properties:
	* src/com/fluendo/codecs/SmokeCodec.java:
	* src/com/fluendo/jheora/DCTDecode.java:
	* src/com/fluendo/jheora/Info.java:
	* src/com/fluendo/jheora/YUVBuffer.java:
	* src/com/fluendo/jst/Element.java:
	* src/com/fluendo/jst/Event.java:
	* src/com/fluendo/jst/Message.java:
	* src/com/fluendo/jst/Pipeline.java:
	* src/com/fluendo/jst/Query.java:
	* src/com/fluendo/player/Cortado.java:
	* src/com/fluendo/player/CortadoPipeline.java:
	* src/com/fluendo/player/Status.java:
	* src/com/fluendo/plugin/JPEGDec.java:
	* src/com/fluendo/plugin/Sink.java:
	* src/com/fluendo/plugin/SmokeDec.java:
	* src/com/fluendo/plugin/TheoraDec.java:
	  remove unneeded imports

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* merged "build" branch:
	  svn merge -r 2703:HEAD branches/build/ trunk/

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	* build.properties:
	* build.xml:
	  add build.properties
	  merge sun and jikes build in one, should now be adaptable
	  to all compilers

2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	* build.xml:
	* HACKING:
	  reorganize build further.  "make ovt" and "make mmjs" seem to
	  produce applets. add HACING notes

2006-01-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* custom/mp-jpeg.sh: